@@ -32,6 +32,8 @@
 +SSC-M: System.Void System.Windows.Browser.ScriptableObjectWrapper::AddEventFromUnmanaged(System.IntPtr,System.IntPtr,System.IntPtr,System.IntPtr)
 +SSC-M: System.Void System.Windows.Browser.ScriptableObjectWrapper::RemoveEventFromUnmanaged(System.IntPtr,System.IntPtr,System.IntPtr,System.IntPtr)
 +SSC-M: System.Void System.Windows.Browser.ScriptableObjectWrapper/EventDelegate::del(System.Object,System.Object)
++SSC-M: System.Void System.Windows.Browser.ScriptObject::set_Handle(System.IntPtr)
++SSC-M: System.Void System.Windows.Browser.ScriptObject::Finalize()
 +SSC-M: T System.Windows.Browser.ScriptObject::GetPropertyInternal<T>(System.IntPtr,System.String)
 +SSC-M: T System.Windows.Browser.ScriptObject::GetPropertyInternal<T>(System.String)
 +SSC-M: System.Void System.Windows.Browser.ScriptObject::SetPropertyInternal(System.IntPtr,System.String,System.Object)
