@@ -1,5 +1,10 @@
 2009-07-22  Rolf Bjarne Kvinge  <RKvinge@novell.com>
 
+	* ScriptableObjectWrapper.cs:
+	* ScriptObject.cs: Retain/Release the native object.
+
+2009-07-22  Rolf Bjarne Kvinge  <RKvinge@novell.com>
+
 	* ScriptObject.cs: InvokeInternal: add null checks.
 
 2009-07-22  Rolf Bjarne Kvinge  <RKvinge@novell.com>
